--- a/code/5-2.html
+++ b/code/5-2.html
@@ -34,7 +34,10 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="top"></div>
+		<div class="top">
+			<p>这是竖直两栏布局</p>
+			<p>这是flex布局</p>
+		</div>
 		<div class="bottom"></div>
 	</div>
 </body>
