--- a/code/6-2.html
+++ b/code/6-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>竖直两栏grid</title>
+	<title>竖直三栏布局flex</title>
 	
 	<style>
 	html,body{
@@ -10,21 +10,20 @@
 		margin:0;
 	}
 	.wrapper{
-		display:grid;
 		width:600px;
 		height:100%;
 		margin:0 auto;
-		grid-template-rows:200px 1fr;
+		display:flex;
+		flex-direction:column;
 	}
-	.top{
+	.top,.bottom{
 		width:100%;
-		height:200px;
-		grid-rows:1;
+		height:100px;
+		flex:0 0 auto;
 		background:red;
 	}
-	.bottom{
-		width:100%;
-		grid-rows:2;
+	.center{
+		flex:1 1 auto;
 		background:yellow;
 	}
 
@@ -34,10 +33,8 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="top">
-			<p>这是竖直两栏布局</p>
-			<p>这是grid布局</p>
-		</div>
+		<div class="top"></div>
+		<div class="center"></div>
 		<div class="bottom"></div>
 	</div>
 </body>
