--- a/algorithm/jscode/智能台灯.html
+++ b/algorithm/jscode/智能台灯.html
@@ -14,7 +14,12 @@
 </head>
 <body>
 
+	<div class='m-light'>
 	
-	<script src="./39.js"></script>
+	<button>开灯</button>
+	
+	</div>
+	
+	<script src="./37.js"></script>
 </body>
 </html>
