--- a/algorithm/jscode/文件上传.html
+++ b/algorithm/jscode/文件上传.html
@@ -13,8 +13,10 @@
 	</style>
 </head>
 <body>
-
+	<div class="m-upload">
 	
-	<script src="./39.js"></script>
+	</div>
+	
+	<script src="./35.js"></script>
 </body>
 </html>
